update circleci python version

--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -7,58 +7,56 @@
    "outputs": [],
    "source": [
     "from snsUtils import getConversationIdsFromUser, getThread, Thread, getTweet, getThread\n",
-    "from datetime import datetime, timedelta, timezone"
+    "from datetime import datetime, timedelta, timezone\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conversation_ids = getConversationIdsFromUser(\n",
-    "    username='threadreaderapp', max_lookback_tweets=100000)"
+    "thread = getThread(1637082694541791233)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "thread = getThread(\"1621837615212429318\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[Photo(previewUrl='https://pbs.twimg.com/media/FrgWCJjaEAExJFE?format=jpg&name=small',\n",
+      "       fullUrl='https://pbs.twimg.com/media/FrgWCJjaEAExJFE?format=jpg&name=orig',\n",
+      "       altText=None)]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5962/3803918559.py:2: FutureWarning: tcooutlinks is deprecated, use links (tcourl attribute) instead\n",
-      "  pprint(thread.tweets[0].tcooutlinks)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[Photo(previewUrl='https://pbs.twimg.com/media/FrgWCJjaEAExJFE?format=jpg&name=small', fullUrl='https://pbs.twimg.com/media/FrgWCJjaEAExJFE?format=jpg&name=orig', altText=None)],\n",
+       " [Photo(previewUrl='https://pbs.twimg.com/media/FrgWD5saMAAzjLy?format=jpg&name=small', fullUrl='https://pbs.twimg.com/media/FrgWD5saMAAzjLy?format=jpg&name=orig', altText=None)],\n",
+       " [Photo(previewUrl='https://pbs.twimg.com/media/FrigzFeXsAI220e?format=jpg&name=small', fullUrl='https://pbs.twimg.com/media/FrigzFeXsAI220e?format=jpg&name=orig', altText=None)]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pprint import pprint\n",
-    "pprint(thread.tweets[0].links)"
+    "pprint(thread.tweets[0].media)\n",
+    "\n",
+    "[tweet.media for tweet in thread.tweets if tweet.media]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "threads-hNXX-s2B-py3.10",
+   "display_name": "raptor-eQf0dIv_-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -72,12 +70,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9c9ba9c9bd5e7c8ecdc7269adc37c639bc6fefd655e3b2591347c718624f11b2"
+    "hash": "40588e803bc5909d1f6788ee9a642654bd860a001eea8ad58fd602b377981a45"
    }
   }
  },
